--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -12,3 +12,5 @@ License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 7.0.0
+URL: https://github.com/kjhealy/farsdata
+BugReports: https://github.com/kjhealy/farsdata/issues
