--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -10,7 +10,9 @@ reference:
     desc: >
       Included datasets.
     contents:
-      - crashes
+      - agetimes
+      - persons
+      - vehicles
 navbar:
   right:
    - icon: fa-github
